@@ -1,63 +1,101 @@
 package routing;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import maritimeCircuit.MaritimeCircuit;
+import stretch.Stretch;
+import terminal.ManagedTerminal;
 import terminal.Terminal;
 
-//maritimeCircuitOne 
-//(Buenos Aires - Santiago (100) | Santiago - Quito (200) | Quito - Lima (300) | Lima - Caracas (400) | Caracas - Buenos Aires (500) ) -> 4 intemerdias
-//maritimeCircuitTwo
-//(Buenos Aires - Santiago (100) | Santiago - Lima | Lima - Caracas (400) | Caracas -Buenos Aires (500) ) -> 3 intemerdias
+class LowerPriceTest {
 
-class LowerPriceTest extends RoutingTest {
+	// TODO: REFACTORIZAR POR HERENCIA
 
-	private LowerPrice lowerPrice;
+	private ManagedTerminal buenosAires;
+	// -------------------------------------------------------------
+	private Terminal guayaquil;
+	private Terminal montevideo;
+	private Terminal lima;
+	private Terminal valparaiso;
+	// ------------------------------------------------------------
+	private Stretch buenosAiresValparaiso;
+	private Stretch valparaisoLima;
+	private Stretch limaGuayaquil;
+	private Stretch guayaquilBuenosAires;
+	private Stretch montevideoBuenosAires;
+	private Stretch limaMontevideo;
+	// -------------------------------------------------------------
+	private MaritimeCircuit maritimeCircuitOne;
+	private MaritimeCircuit maritimeCircuitTwo;
+	// -------------------------------------------------------------
+	private LowerPrice lowerPrice; // SUT
 
 	@BeforeEach
 	void setUp() {
+		// MANAGED TERMINAL
+		buenosAires = mock(ManagedTerminal.class);
+		// ------------------------------------------------------------------------------------------
+		// TERMINAL
+		guayaquil = mock(Terminal.class);
+		montevideo = mock(Terminal.class);
+		lima = mock(Terminal.class);
+		valparaiso = mock(Terminal.class);
+		// ------------------------------------------------------------------------------------------
+		// STRETCH
+		buenosAiresValparaiso = mock(Stretch.class);
+		when(buenosAiresValparaiso.getOrigin()).thenReturn(buenosAires);
+		when(buenosAiresValparaiso.getDestiny()).thenReturn(valparaiso);
+		when(buenosAiresValparaiso.getPrice()).thenReturn(1040.00);
+
+		valparaisoLima = mock(Stretch.class);
+		when(valparaisoLima.getOrigin()).thenReturn(valparaiso);
+		when(valparaisoLima.getDestiny()).thenReturn(lima);
+		when(valparaisoLima.getPrice()).thenReturn(2024.00);
+
+		limaGuayaquil = mock(Stretch.class);
+		when(limaGuayaquil.getOrigin()).thenReturn(lima);
+		when(limaGuayaquil.getDestiny()).thenReturn(guayaquil);
+		when(limaGuayaquil.getPrice()).thenReturn(1821.00);
+
+		guayaquilBuenosAires = mock(Stretch.class);
+		when(guayaquilBuenosAires.getOrigin()).thenReturn(guayaquil);
+		when(guayaquilBuenosAires.getDestiny()).thenReturn(buenosAires);
+		when(guayaquilBuenosAires.getPrice()).thenReturn(2192.00);
+
+		montevideoBuenosAires = mock(Stretch.class);
+		when(montevideoBuenosAires.getOrigin()).thenReturn(montevideo);
+		when(montevideoBuenosAires.getDestiny()).thenReturn(buenosAires);
+		when(montevideoBuenosAires.getPrice()).thenReturn(2905.00);
+
+		limaMontevideo = mock(Stretch.class);
+		when(limaMontevideo.getOrigin()).thenReturn(lima);
+		when(limaMontevideo.getDestiny()).thenReturn(montevideo);
+		when(limaMontevideo.getPrice()).thenReturn(1497.00);
+		// ------------------------------------------------------------------------------------------
+		// MARITIME CIRCUIT
+		maritimeCircuitOne = mock(MaritimeCircuit.class);
+		when(maritimeCircuitOne.getStretches())
+				.thenReturn(List.of(montevideoBuenosAires, buenosAiresValparaiso, valparaisoLima, limaMontevideo));
+
+		maritimeCircuitTwo = mock(MaritimeCircuit.class);
+		when(maritimeCircuitTwo.getStretches())
+				.thenReturn(List.of(buenosAiresValparaiso, valparaisoLima, limaGuayaquil, guayaquilBuenosAires));
+		// ------------------------------------------------------------------------------------------
+		// LOWER PRICE
 		lowerPrice = new LowerPrice();
-		configureMocks();
-	}
-
-	@Override
-	protected void configureMocks() {
-		super.configureMocks();
-		when(buenosAiresSantiago.getPrice()).thenReturn(100.0);
-		when(santiagoQuito.getPrice()).thenReturn(200.0);
-		when(quitoLima.getPrice()).thenReturn(300.0);
-		when(limaCaracas.getPrice()).thenReturn(400.0);
-		when(caracasBuenosAires.getPrice()).thenReturn(500.0);
-		when(caracasBuenosAires.getPrice()).thenReturn(1000.0);
 	}
 
 	@Test
-	void testBestCircuitWithLowerPrice() {
-		assertEquals(maritimeCircuitOne, lowerPrice.bestCircuitBetween(buenosAires, caracas,
-				Arrays.asList(maritimeCircuitOne, maritimeCircuitTwo)));
-	}
-
-	@Test
-	void testCannotFindBestCircuitBecauseDestinyTerminalNotInMaritimeCircuits() {
-		assertThrows(RuntimeException.class, () -> {
-			lowerPrice.bestCircuitBetween(buenosAires, mock(Terminal.class),
-					Arrays.asList(maritimeCircuitOne, maritimeCircuitTwo));
-		});
-	}
-
-	@Test
-	void testCannotFindBestCircuitBecauseTheOriginTerminalHasNotCircuits() {
-		assertThrows(RuntimeException.class, () -> {
-			lowerPrice.bestCircuitBetween(buenosAires, caracas, Arrays.asList(mock(MaritimeCircuit.class)));
-		});
+	void testBestCircuitBetween_ReturnsExpectedCircuit_WhenUsingLowerPriceStrategy() throws Exception {
+		assertEquals(maritimeCircuitOne,
+				lowerPrice.bestCircuitBetween(buenosAires, lima, List.of(maritimeCircuitOne, maritimeCircuitTwo)));
 	}
 
 }
