@@ -1,63 +1,119 @@
 package routing;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import maritimeCircuit.MaritimeCircuit;
+import stretch.Stretch;
+import terminal.ManagedTerminal;
 import terminal.Terminal;
 
-//maritimeCircuitOne 
-//(Buenos Aires - Santiago (3) | Santiago - Quito (5) | Quito - Lima (7) | Lima - Caracas (9) | Caracas - Buenos Aires (7) ) -> 4 intemerdias
-//maritimeCircuitTwo
-//(Buenos Aires - Santiago (3) | Santiago - Lima (3) | Lima - Caracas (9) | Caracas -Buenos Aires (7) ) -> 3 intemerdias
+class ShorterTimeTest {
 
-class ShorterTimeTest extends RoutingTest {
+	// TODO: REFACTORIZAR POR HERENCIA
 
-	private ShorterTime shorterTime;
+	private ManagedTerminal buenosAires;
+	// -------------------------------------------------------------
+	private Terminal guayaquil;
+	private Terminal montevideo;
+	private Terminal lima;
+	private Terminal valparaiso;
+	// ------------------------------------------------------------
+	private Stretch buenosAiresValparaiso;
+	private Stretch valparaisoLima;
+	private Stretch limaGuayaquil;
+	private Stretch guayaquilBuenosAires;
+	private Stretch montevideoBuenosAires;
+	private Stretch limaMontevideo;
+	// -------------------------------------------------------------
+	private MaritimeCircuit maritimeCircuitOne;
+	private MaritimeCircuit maritimeCircuitTwo;
+	// -------------------------------------------------------------
+	private ShorterTime shorterTime; // SUT
 
 	@BeforeEach
 	void setUp() {
+		// MANAGED TERMINAL
+		buenosAires = mock(ManagedTerminal.class);
+		// ------------------------------------------------------------------------------------------
+		// TERMINAL
+		guayaquil = mock(Terminal.class);
+		montevideo = mock(Terminal.class);
+		lima = mock(Terminal.class);
+		valparaiso = mock(Terminal.class);
+		// ------------------------------------------------------------------------------------------
+		// STRETCH
+		buenosAiresValparaiso = mock(Stretch.class);
+		when(buenosAiresValparaiso.getOrigin()).thenReturn(buenosAires);
+		when(buenosAiresValparaiso.getDestiny()).thenReturn(valparaiso);
+		when(buenosAiresValparaiso.getTime()).thenReturn(Duration.ofHours(13));
+
+		valparaisoLima = mock(Stretch.class);
+		when(valparaisoLima.getOrigin()).thenReturn(valparaiso);
+		when(valparaisoLima.getDestiny()).thenReturn(lima);
+		when(valparaisoLima.getTime()).thenReturn(Duration.ofHours(9));
+
+		limaGuayaquil = mock(Stretch.class);
+		when(limaGuayaquil.getOrigin()).thenReturn(lima);
+		when(limaGuayaquil.getDestiny()).thenReturn(guayaquil);
+		when(limaGuayaquil.getTime()).thenReturn(Duration.ofHours(6));
+
+		guayaquilBuenosAires = mock(Stretch.class);
+		when(guayaquilBuenosAires.getOrigin()).thenReturn(guayaquil);
+		when(guayaquilBuenosAires.getDestiny()).thenReturn(buenosAires);
+		when(guayaquilBuenosAires.getTime()).thenReturn(Duration.ofHours(36));
+
+		montevideoBuenosAires = mock(Stretch.class);
+		when(montevideoBuenosAires.getOrigin()).thenReturn(montevideo);
+		when(montevideoBuenosAires.getDestiny()).thenReturn(buenosAires);
+		when(montevideoBuenosAires.getTime()).thenReturn(Duration.ofHours(4));
+
+		limaMontevideo = mock(Stretch.class);
+		when(limaMontevideo.getOrigin()).thenReturn(lima);
+		when(limaMontevideo.getDestiny()).thenReturn(montevideo);
+		when(limaMontevideo.getTime()).thenReturn(Duration.ofHours(26));
+		// ------------------------------------------------------------------------------------------
+		// MARITIME CIRCUIT
+		maritimeCircuitOne = mock(MaritimeCircuit.class);
+		when(maritimeCircuitOne.getStretches())
+				.thenReturn(List.of(montevideoBuenosAires, buenosAiresValparaiso, valparaisoLima, limaMontevideo));
+
+		maritimeCircuitTwo = mock(MaritimeCircuit.class);
+		when(maritimeCircuitTwo.getStretches())
+				.thenReturn(List.of(buenosAiresValparaiso, valparaisoLima, limaGuayaquil, guayaquilBuenosAires));
+		// ------------------------------------------------------------------------------------------
+		// SHOTER TIME
 		shorterTime = new ShorterTime();
-		configureMocks();
-	}
-
-	@Override
-	protected void configureMocks() {
-		super.configureMocks();
-		when(buenosAiresSantiago.getTime()).thenReturn(Duration.ofHours(3));
-		when(santiagoQuito.getTime()).thenReturn(Duration.ofHours(5));
-		when(quitoLima.getTime()).thenReturn(Duration.ofHours(7));
-		when(limaCaracas.getTime()).thenReturn(Duration.ofHours(9));
-		when(caracasBuenosAires.getTime()).thenReturn(Duration.ofHours(7));
-		when(santiagoLima.getTime()).thenReturn(Duration.ofHours(3));
 	}
 
 	@Test
-	void testBestCircuitWithLowerPrice() {
-		assertEquals(maritimeCircuitTwo, shorterTime.bestCircuitBetween(buenosAires, caracas,
-				Arrays.asList(maritimeCircuitOne, maritimeCircuitTwo)));
+	void testBestCircuitBetween_ReturnsShortestCircuit_WhenMultipleCircuitsExist() throws Exception {
+		assertEquals(maritimeCircuitOne,
+				shorterTime.bestCircuitBetween(buenosAires, lima, List.of(maritimeCircuitOne, maritimeCircuitTwo)));
 	}
 
 	@Test
-	void testCannotFindBestCircuitBecauseDestinyTerminalNotInMaritimeCircuits() {
-		assertThrows(RuntimeException.class, () -> {
-			shorterTime.bestCircuitBetween(buenosAires, mock(Terminal.class),
-					Arrays.asList(maritimeCircuitOne, maritimeCircuitTwo));
-		});
+	void testBestCircuitBetween_ThrowsException_WhenCircuitListIsEmpty() {
+		assertThrows(RuntimeException.class, () -> shorterTime.bestCircuitBetween(buenosAires, lima, List.of()),
+				"The maritime circuit must not be empty.");
 	}
 
 	@Test
-	void testCannotFindBestCircuitBecauseTheOriginTerminalHasNotCircuits() {
-		assertThrows(RuntimeException.class, () -> {
-			shorterTime.bestCircuitBetween(buenosAires, caracas, Arrays.asList());
-		});
+	void testBestCircuitBetween_ThrowsException_WhenDestinationNotInMaritimeCircuits() {
+		Terminal rioDeJaneiro = mock(Terminal.class);
+
+		assertThrows(RuntimeException.class,
+				() -> shorterTime.bestCircuitBetween(buenosAires, rioDeJaneiro,
+						List.of(maritimeCircuitOne, maritimeCircuitTwo)),
+				"The destination must be in the maritime circuits.");
 	}
 
 }
